This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

09-Apr-2002 (Lars Duening)
    - (prolang.y) The improved type checking on <op>= accidentally
         broke the type checking on the plain assignment (reported by Dafire).
    - (mregex.c) Substituting patterns copied garbage characters, too
         (reported by Markus).
    - (hash.c) Made the hash functions resistant against 0-length
         strings.

08-Apr-2002 (Lars Duening)  (3.3.199)
    - (efuns.c) The length computation for the result of regreplace()
         was wrong when using closure-substitutions (reported by Markus Peter
         and Dafire).
    - (prolang.y) Improved the type checking on the <op>= operators
         to match what the VM actually implements (reported by Menaures).

05-Apr-2002 (Lars Duening)  (3.3.198)
    - (efuns, rxcache, ed.c) Implemented regexp substitution and
         made ed and regreplace() work with PCRE.
    - (efuns, rxcache, func_spec) New efun regmatch().
    - (main.c, rxcache.c) PCRE-related bugfixes.
    - (pkg-pcre.c, pcre/internal.h) New unified wrapper for all PCRE
        modules. For this to work, the PCRE internal.h had to be
        protected against multiple inclusion.
    - (mregex) The files formerly known as rxcache.[ch].

04-Apr-2002 (Lars Duening)  (3.3.197)
    - (mapping.c) During a GC, the .hash member in a mapping does not
         point to a mapping-hash structure - the statistics code
         ignored that (b-011015-0).
    - (gcollect, swap.c) Made the GC status variable less reliant
         on magic numbers.
    - (swap, gcollect.c, object.c, simulate.c) When removing the swap
         entry for a modified program, the code now also makes sure
         that the linenumbers are loaded back into memory.

03-Apr-2002 (Lars Duening)  (3.3.196)
    - (efuns.c, rxcache.c) The old regexp code is usable again.