@@ -8,5 +8,5 @@ DESCRIPTION
         nothing is changed.
 
 SEE ALSO
-        mappingp(E), mkmapping(E), m_indices(E), m_values(E),
+        mappingp(E), mkmapping(E), m_add(E), m_indices(E), m_values(E),
         sizeof(E), widthof(E)
