@@ -5,5 +5,5 @@ DESCRIPTION
         Returns an array containing the indices of mapping 'map'.
 
 SEE ALSO
-        mappingp(E), mkmapping(E), m_values(E), m_delete(E),
+        mappingp(E), mkmapping(E), m_values(E), m_add(E), m_delete(E),
         sizeof(E), widthof(E), unmkmapping(E)
