@@ -20,4 +20,4 @@ EXAMPLE
 
 SEE ALSO
         mappings(LPC), mappingp(E), m_indices(E), m_values(E),
-        m_delete(E), sizeof(E), widthof(E), unmkmapping(E).
+        m_add(E), m_delete(E), sizeof(E), widthof(E), unmkmapping(E).
