@@ -20,13 +20,13 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 200)
-(Parent-Version lpmud 3-3 199)
-(Version-Log "Corrected the typechecking on plain assignments.
-Corrected regex pattern substitution.")
+(Project-Version lpmud 3-3 201)
+(Parent-Version lpmud 3-3 200)
+(Version-Log "Corrected the error message on argument checking.
+New efun m_add().")
 (New-Version-Log
 "")
-(Checkin-Time "Tue, 09 Apr 2002 10:35:37 -0600")
+(Checkin-Time "Thu, 18 Apr 2002 12:12:45 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -60,8 +60,8 @@ Corrected regex pattern substitution.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.6 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.40 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.263 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.252 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.264 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.253 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.14 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -148,8 +148,8 @@ Corrected regex pattern substitution.")
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.9 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.9 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.8 644))
-  (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.11 644))
-  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.42 644))
+  (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.12 644))
+  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.43 644))
   (src/md5.h (lpmud/L/18_md5.h 1.2 644))
   (src/md5.c (lpmud/L/19_md5.c 1.5 644))
   (src/mempools.h (lpmud/D/48_mempools.h 1.2.1.3 644))
@@ -211,7 +211,7 @@ Corrected regex pattern substitution.")
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.11 644))
   (src/port.c (lpmud/39_port.c 1.17.1.6 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.14 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.13 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.14 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.1 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -242,7 +242,7 @@ Corrected regex pattern substitution.")
   (src/xalloc.c (lpmud/H/0_xalloc.c 1.2.1.8 644))
 
   ;; Build files
-  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.8 644))
+  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.9 644))
   (src/string_spec (lpmud/F/6_string_spe 1.14.1.3 644))
   (src/mkfunc.c (lpmud/L/14_mkfunc.c 1.1 644))
   (src/make_func.y (lpmud/b/7_make_func. 1.25.1.23 644))
@@ -973,15 +973,16 @@ Corrected regex pattern substitution.")
   (doc/efun/localtime (lpmud/N/8_localtime 1.1 644))
   (doc/efun/log (lpmud/p/10_log 1.2.1.2 644))
   (doc/efun/lower_case (lpmud/l/29_lower_case 1.2 644))
+  (doc/efun/m_add (lpmud/V/33_m_add 1.1 644))
   (doc/efun/m_allocate (lpmud/l/38_m_allocate 1.3 644))
   (doc/efun/m_contains (lpmud/l/50_m_contains 1.2 644))
-  (doc/efun/m_delete (lpmud/c/44_m_delete 1.4 644))
-  (doc/efun/m_indices (lpmud/c/43_m_indices 1.5 644))
+  (doc/efun/m_delete (lpmud/c/44_m_delete 1.5 644))
+  (doc/efun/m_indices (lpmud/c/43_m_indices 1.6 644))
   (doc/efun/m_reallocate (lpmud/l/51_m_realloca 1.3 644))
-  (doc/efun/m_values (lpmud/c/41_m_values 1.5 644))
+  (doc/efun/m_values (lpmud/c/41_m_values 1.6 644))
   (doc/efun/make_shared_string (lpmud/l/24_make_share 1.2 644))
   (doc/efun/map (lpmud/l/46_map 1.6.1.2 644))
-  (doc/efun/mappingp (lpmud/c/40_mappingp 1.6 644))
+  (doc/efun/mappingp (lpmud/c/40_mappingp 1.7 644))
   (doc/efun/map_indices (lpmud/m/8_map_indice 1.3.1.2 644))
   (doc/efun/map_objects (lpmud/p/11_map_object 1.1.1.1 644))
   (doc/efun/max (lpmud/K/41_max 1.1 644))
@@ -990,7 +991,7 @@ Corrected regex pattern substitution.")
   (doc/efun/member (lpmud/p/12_member 1.2 644))
   (doc/efun/min (lpmud/K/42_min 1.1 644))
   (doc/efun/mkdir (lpmud/p/14_mkdir 1.3 644))
-  (doc/efun/mkmapping (lpmud/c/39_mkmapping 1.6 644))
+  (doc/efun/mkmapping (lpmud/c/39_mkmapping 1.7 644))
   (doc/efun/move_object (lpmud/p/15_move_objec 1.4.1.1 644))
   (doc/efun/negate (lpmud/p/16_negate 1.2 644))
   (doc/efun/next_bit (lpmud/C/43_next_bit 1.4 644))
@@ -1125,7 +1126,7 @@ Corrected regex pattern substitution.")
   (doc/efun/widthof (lpmud/l/41_widthof 1.5 644))
   (doc/efun/write (lpmud/r/9_write 1.2.1.1 644))
   (doc/efun/write_bytes (lpmud/r/10_write_byte 1.2 644))
-  (doc/efun/write_file (lpmud/r/11_write_file 1.3 644))
+  (doc/efun/write_file (lpmud/r/11_write_file 1.4 644))
   (doc/efun/wizlist_info (lpmud/r/12_wizlist_in 1.2.1.4 644))
   (doc/efun/xor_bits (lpmud/C/47_xor_bits 1.5 644))
 
